// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions acceptedPricesUpdate 1`] = `
Object {
  "type": "dualClassAcceptedPrices",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions addressesUpdate 1`] = `
Object {
  "type": "dualClassAddresses",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions balancesUpdate 1`] = `
Object {
  "type": "dualClassBalances",
  "value": Object {
    "a": 1,
    "b": 2,
  },
}
`;

exports[`actions conversionsUpdate 1`] = `
Object {
  "type": "dualClassConversions",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions exchangePricesUpdate 1`] = `
Object {
  "type": "dualClassExchangePrices",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions fetchAcceptedPrices 1`] = `
Array [
  Object {
    "type": "dualClassAcceptedPrices",
    "value": Array [
      "test",
    ],
  },
]
`;

exports[`actions fetchConversions 1`] = `
Array [
  Object {
    "type": "dualClassConversions",
    "value": Array [
      Object {
        "transactionHash": "aaa",
      },
      Object {
        "timestamp": 1234567890,
        "transactionHash": "bbb",
      },
    ],
  },
]
`;

exports[`actions fetchConversions 2`] = `
Object {
  "timestamp": 1234567890,
  "transactionHash": "aaa",
}
`;

exports[`actions fetchConversions 3`] = `
Object {
  "timestamp": 0,
  "transactionHash": "ccc",
}
`;

exports[`actions fetchExchangePrices 5 1`] = `
Array [
  Object {
    "type": "dualClassExchangePrices",
    "value": Array [
      "test",
      1,
      1210567890,
      0,
      "ETH|USD",
    ],
  },
]
`;

exports[`actions fetchExchangePrices 60 1`] = `
Array [
  Object {
    "type": "dualClassExchangePrices",
    "value": Array [
      "test",
      60,
      888967890,
      0,
      "ETH|USD",
    ],
  },
]
`;

exports[`actions getAddresses 1`] = `
Array [
  Object {
    "type": "dualClassAddresses",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions getBalances 1`] = `
Array [
  Object {
    "type": "dualClassBalances",
    "value": Object {
      "a": undefined,
      "b": undefined,
    },
  },
]
`;

exports[`actions getBalances 2`] = `
Array [
  Array [
    "0xC600fe64CDa57b607B251aa0879b8386e9FEd9f7",
    "0x0",
  ],
  Array [
    "0xa03b5171fE58fD2d6a018693E8D2CeD83b73ce00",
    "0x0",
  ],
]
`;

exports[`actions getStates 1`] = `
Array [
  Object {
    "type": "dualClassStates",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions refresh 1`] = `
Array [
  Object {
    "type": "dualClassStates",
    "value": Object {
      "test": "test",
    },
  },
  Object {
    "type": "dualClassBalances",
    "value": Object {
      "a": undefined,
      "b": undefined,
    },
  },
  Object {
    "type": "dualClassExchangePrices",
    "value": Array [
      "test",
      1,
      1210567890,
      0,
      "ETH|USD",
    ],
  },
  Object {
    "type": "dualClassAcceptedPrices",
    "value": Array [
      "test",
    ],
  },
  Object {
    "type": "dualClassConversions",
    "value": Array [
      Object {
        "transactionHash": "aaa",
      },
      Object {
        "timestamp": 1234567890,
        "transactionHash": "bbb",
      },
    ],
  },
]
`;

exports[`actions refreshAdmin 1`] = `[Function]`;

exports[`actions statesUpdate 1`] = `
Object {
  "type": "dualClassStates",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions subscribe 1`] = `
Array [
  Object {
    "custodianType": "Beethoven",
    "id": 0,
    "tenor": "Perpetual",
    "type": "dualClassSubscription",
  },
  Object {
    "custodianType": "Beethoven",
    "id": 123,
    "tenor": "Perpetual",
    "type": "dualClassSubscription",
  },
  Object {
    "type": "dualClassStates",
    "value": Object {
      "test": "test",
    },
  },
  Object {
    "type": "dualClassBalances",
    "value": Object {
      "a": undefined,
      "b": undefined,
    },
  },
  Object {
    "type": "dualClassExchangePrices",
    "value": Array [
      "test",
      1,
      1210567890,
      0,
      "ETH|USD",
    ],
  },
  Object {
    "type": "dualClassAcceptedPrices",
    "value": Array [
      "test",
    ],
  },
  Object {
    "type": "dualClassConversions",
    "value": Array [
      Object {
        "transactionHash": "aaa",
      },
      Object {
        "timestamp": 1234567890,
        "transactionHash": "bbb",
      },
    ],
  },
]
`;

exports[`actions subscribeAdmin 1`] = `[Function]`;

exports[`actions subscriptionUpdate 1`] = `
Object {
  "custodianType": "type",
  "id": 123,
  "tenor": "tenor",
  "type": "dualClassSubscription",
}
`;
